--- a/index.html
+++ b/index.html
@@ -284,7 +284,35 @@
           <h6>$16.48 <span>$6.48</span></h6>
         </div>
       </div>
-      <a  href="file/Shop.html">  view more Product</a>
+      <a href="file/Shop.html"> view more Product</a>
+    </div>
+    <div class="forth-container container">
+      <div class="row">
+        <div class="col-lg-6 row d-flex">
+          <div class="col-lg-6"><img src="image/36 2.png" alt="" /></div>
+          <div class="col-lg-6"><img src="image/54 4.png" alt="" /></div>
+        </div>
+        <div class="col-lg-6 d-flex">
+          <div>
+            <h4>Featured Products</h4>
+            <h1>We love what we do</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur. Mattis vitae vitae est
+              venenatis egestas pharetra. Morbi sit tellus elementum elementum
+              tincidunt morbi id.
+            </p>
+            <p>
+              Gravida rhoncus tellus amet dui nunc. Molestie viverra ultricies
+              tellus donec nam felis massa. Amet consectetur lectus nec
+              facilisis massa nunc sem scelerisque. Vel massa gravida sem
+              vulputate ultrices faucibus.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="fivth-container  container">
+
     </div>
   </body>
   <!-- ------------------ bootsRap Link ------------------ -->
