--- a/index.html
+++ b/index.html
@@ -312,7 +312,45 @@
       </div>
     </div>
     <div class="fivth-container  container">
-
+      <h4>Featured Products</h4>
+      <h2>BESTSELLER PRODUCTS</h2>
+      <p>Problems trying to resolve the conflict between</p>
+      <div class="row">
+        <div class="col-lg-3">
+          <img src="image/bx_bxs-book-reader.png" alt="">
+          <h4>Easy Wins</h4>
+          <p>Lorem ipsum dolor sit amet consectetur. Mattis vitae vitae est venenatis egestas pharetra</p>
+        </div>
+        <div class="col-lg-3">
+          <img src="image/icon cool-icon-153.svg" alt="">
+          <h4>Easy Wins</h4>
+          <p>Lorem ipsum dolor sit amet consectetur. Mattis vitae vitae est venenatis egestas pharetra</p>
+        </div>
+        <div class="col-lg-3">
+          <img src="image/uil_arrow-growth.png" alt="">
+          <h4>Easy Wins</h4>
+          <p>Lorem ipsum dolor sit amet consectetur. Mattis vitae vitae est venenatis egestas pharetra</p>
+        </div>
+      </div>
+    </div>
+    <div class="sixth-container container">
+      <h2>Featured Products</h2>
+      <h1>Featured Posts</h1>
+      <div class="row">
+        <div class="col-lg-6 d-flex">
+          <div class="first-img">
+            bk
+          </div>
+          <div>
+            <div><h5>Music Instruments</h5></div>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="second-img">
+            hv
+          </div>
+        </div>
+      </div>
     </div>
   </body>
   <!-- ------------------ bootsRap Link ------------------ -->
