add more thing in home page

--- a/index.html
+++ b/index.html
@@ -311,25 +311,34 @@
         </div>
       </div>
     </div>
-    <div class="fivth-container  container">
+    <div class="fivth-container container">
       <h4>Featured Products</h4>
       <h2>BESTSELLER PRODUCTS</h2>
       <p>Problems trying to resolve the conflict between</p>
       <div class="row">
         <div class="col-lg-3">
-          <img src="image/bx_bxs-book-reader.png" alt="">
+          <img src="image/bx_bxs-book-reader.png" alt="" />
           <h4>Easy Wins</h4>
-          <p>Lorem ipsum dolor sit amet consectetur. Mattis vitae vitae est venenatis egestas pharetra</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur. Mattis vitae vitae est
+            venenatis egestas pharetra
+          </p>
         </div>
         <div class="col-lg-3">
-          <img src="image/icon cool-icon-153.svg" alt="">
+          <img src="image/icon cool-icon-153.svg" alt="" />
           <h4>Easy Wins</h4>
-          <p>Lorem ipsum dolor sit amet consectetur. Mattis vitae vitae est venenatis egestas pharetra</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur. Mattis vitae vitae est
+            venenatis egestas pharetra
+          </p>
         </div>
         <div class="col-lg-3">
-          <img src="image/uil_arrow-growth.png" alt="">
+          <img src="image/uil_arrow-growth.png" alt="" />
           <h4>Easy Wins</h4>
-          <p>Lorem ipsum dolor sit amet consectetur. Mattis vitae vitae est venenatis egestas pharetra</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur. Mattis vitae vitae est
+            venenatis egestas pharetra
+          </p>
         </div>
       </div>
     </div>
@@ -339,15 +348,33 @@
       <div class="row">
         <div class="col-lg-6 d-flex">
           <div class="first-img">
-            bk
+            <div class="icon">
+              <span><i class="fa-regular fa-heart"></i></span>
+              <span><i class="fa-solid fa-cart-shopping"></i></span>
+              <span><i class="fa-regular fa-eye"></i></span>
+            </div>
           </div>
-          <div>
-            <div><h5>Music Instruments</h5></div>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="second-img">
-            hv
+          <div class="d-flex align-items-center">
+            <div>
+              <div><h5>Music Instruments</h5></div>
+              <h4>Drums</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur. Mattis vitae vitae est
+                venenatis egestas pharetra
+              </p>
+              <div class="d-flex sale">
+                <i class="fa-solid fa-download"></i>
+                <p class="m-0 p-0">15 Sales</p>
+              </div>
+              <div class="rate">$16.48 <span>$6.48</span></div>
+              <div class="item-colors">
+                <span style="background: #23a6f0"></span>
+                <span style="background: #23856d"></span>
+                <span style="background: #e77c40"></span>
+                <span style="background: #252b42"></span>
+              </div>
+              
+            </div>
           </div>
         </div>
       </div>
