--- a/index.html
+++ b/index.html
@@ -373,7 +373,13 @@
                 <span style="background: #e77c40"></span>
                 <span style="background: #252b42"></span>
               </div>
-              
+              <div class="details d-flex my-4">
+                <div>
+                  <i style="color: #23a6f0" class="fa-regular fa-clock"></i>
+                  <p>22h...</p>
+                </div>
+                <div><img width="60%" src="image/Vector.png" alt=""> <p>64 Lessons</p></div>
+              </div>
             </div>
           </div>
         </div>
