--- a/index.html
+++ b/index.html
@@ -346,42 +346,12 @@
       <h2>Featured Products</h2>
       <h1>Featured Posts</h1>
       <div class="row">
-        <div class="col-lg-6 d-flex">
-          <div class="first-img">
-            <div class="icon">
-              <span><i class="fa-regular fa-heart"></i></span>
-              <span><i class="fa-solid fa-cart-shopping"></i></span>
-              <span><i class="fa-regular fa-eye"></i></span>
-            </div>
+        <div class="col-lg-6 row">
+          <div class="col-lg-6 position-relative">
+            <img src="image/unsplash_75EFpyXu3Wg.png" alt="">
+            
           </div>
-          <div class="d-flex align-items-center">
-            <div>
-              <div><h5>Music Instruments</h5></div>
-              <h4>Drums</h4>
-              <p>
-                Lorem ipsum dolor sit amet consectetur. Mattis vitae vitae est
-                venenatis egestas pharetra
-              </p>
-              <div class="d-flex sale">
-                <i class="fa-solid fa-download"></i>
-                <p class="m-0 p-0">15 Sales</p>
-              </div>
-              <div class="rate">$16.48 <span>$6.48</span></div>
-              <div class="item-colors">
-                <span style="background: #23a6f0"></span>
-                <span style="background: #23856d"></span>
-                <span style="background: #e77c40"></span>
-                <span style="background: #252b42"></span>
-              </div>
-              <div class="details d-flex my-4">
-                <div>
-                  <i style="color: #23a6f0" class="fa-regular fa-clock"></i>
-                  <p>22h...</p>
-                </div>
-                <div><img width="60%" src="image/Vector.png" alt=""> <p>64 Lessons</p></div>
-              </div>
-            </div>
-          </div>
+          
         </div>
       </div>
     </div>
