--- a/file/contact.html
+++ b/file/contact.html
@@ -76,7 +76,7 @@
       </div>
       <!-- Navigation Bar -->
 
-      <nav class="navbar navbar-expand-lg navbar-light bg-white  shadow-sm">
+      <nav class="navbar navbar-expand-lg navbar-light bg-white ">
         <div class="container-fluid">
           <!-- Logo -->
           <a class="navbar-brand d-flex align-items-center" href="#">
