--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
             <!-- Navigation Bar -->
 
-            <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+            <nav class="navbar navbar-expand-lg navbar-light bg-white">
                 <div class="container-fluid">
                     <!-- Logo -->
                     <a class="navbar-brand d-flex align-items-center" href="#">
@@ -293,8 +293,8 @@
             <h2>Featured Products</h2>
             <h1>Featured Posts</h1>
             <div class="row mt-5">
-                <div class="col-lg-6 row">
-                    <div class="col-lg-4 position-relative">
+                <div class="col-lg-6 col-md-12 my-3 row">
+                    <div class="col-lg-4 col-md-4 position-relative">
                         <img src="image/unsplash_75EFpyXu3Wg.png" alt="" />
                         <div class="sale position-absolute">Sale</div>
                         <div class="icon position-absolute">
@@ -303,7 +303,7 @@
                             <span><i class="fa-regular fa-eye"></i></span>
                         </div>
                     </div>
-                    <div class="col-lg-8 d-flex">
+                    <div class="col-lg-8 col-md-8 d-flex">
                         <div>
                             <div class="d-flex">
                                 <a href="">Music Instruments</a>
@@ -322,12 +322,84 @@
                             </div>
 
                             <h6 class="my-4">$16.48<span>$6.48</span></h6>
+                            <div class="d-flex item-color">
+                                <span style="background: #23a6f0;"></span>
+                                <span style="background: #23856d;"></span>
+                                <span style="background: #e77c40;"></span>
+                                <span style="background: #252b42;"></span>
+                            </div>
+                            <div class="product-features">
+                                <span class="feature"><i style="color: #23a6f0;" class="fas fa-clock"></i> 22h</span>
+                                <span class="feature"><i style="color: #e77c40;" class="fas fa-book"></i> 64 Lessons</span>
+                                <span class="feature"><i style="color: #23856d;" class="fas fa-chart-line"></i> Progress</span>
+                            </div>
+                            <a class="button" href=""> Learn more <i class="fa-solid fa-chevron-right"></i></a>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6"></div>
+                <div class="col-lg-6 col-md-12 my-3 row">
+                    <div class="col-lg-4 col-md-4 position-relative">
+                        <img src="image/unsplash_ruJm3dBXCqw.png" alt="" />
+                        <div class="sale position-absolute">Sale</div>
+                        <div class="icon position-absolute">
+                            <span><i class="fa-regular fa-heart"></i></span>
+                            <span><i class="fa-solid fa-cart-shopping"></i></span>
+                            <span><i class="fa-regular fa-eye"></i></span>
+                        </div>
+                    </div>
+                    <div class="col-lg-8 col-md-8 d-flex">
+                        <div>
+                            <div class="d-flex">
+                                <a href="">Music Instruments</a>
+                                <span class="d-flex">
+                                    <i class="fa-regular fa-star"></i>
+                                    <p>4.9</p>
+                                </span>
+                            </div>
+                            <h4>Drums</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur. Mattis vitae vitae est venenatis egestas pharetra
+                            </p>
+                            <div class="d-flex sale">
+                                <i class="fa-solid fa-download"></i>
+                                <p>15 Sales</p>
+                            </div>
+
+                            <h6 class="my-4">$16.48<span>$6.48</span></h6>
+                            <div class="d-flex item-color">
+                                <span style="background: #23a6f0;"></span>
+                                <span style="background: #23856d;"></span>
+                                <span style="background: #e77c40;"></span>
+                                <span style="background: #252b42;"></span>
+                            </div>
+                            <div class="product-features">
+                                <span class="feature"><i style="color: #23a6f0;" class="fas fa-clock"></i> 22h</span>
+                                <span class="feature"><i style="color: #e77c40;" class="fas fa-book"></i> 64 Lessons</span>
+                                <span class="feature"><i style="color: #23856d;" class="fas fa-chart-line"></i> Progress</span>
+                            </div>
+                            <a class="button" href=""> Learn more <i class="fa-solid fa-chevron-right"></i></a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+        <footer>
+   <div class="first-container-footer container">
+
+    <div class="row">
+      <div class="col-lg-6">
+        <h1>STAY UPTO DATE ABOUT OUR LATEST OFFERS</h1>
+      </div>
+      <div class="col-lg-6">
+        <form action="">
+            <input type="email" placeholder="Enter your email address">
+            <br>
+            <button>Subscribe to Newsletter</button>
+        </form>
+      </div>
+    </div>
+   </div>
+        </footer>
     </body>
     <!-- ------------------ bootsRap Link ------------------ -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
