about us page is made responsive

--- a/file/About.html
+++ b/file/About.html
@@ -121,7 +121,7 @@
         </header>
         <div class="first-container container">
             <div class="row">
-                <div class="col-lg-6 d-flex">
+                <div class="col-lg-6 col-md-6 d-flex">
                     <div>
                         <div>
                             <h5>ABOUT COMPANY</h5>
@@ -133,14 +133,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 d-flex">
+                <div class="col-lg-6 col-md-6 d-flex">
                     <img src="../image/hero-cover-1.png" alt="" />
                 </div>
             </div>
         </div>
         <div class="second-container container">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-6">
                     <h5>Problems trying</h5>
                     <h4>
                         Met minim Mollie non desert <br />
@@ -148,7 +148,7 @@
                         met sent.
                     </h4>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-6">
                     <p>
                         Lorem ipsum dolor sit amet consectetur. Mattis vitae vitae est venenatis egestas pharetra. Morbi sit tellus elementum elementum tincidunt morbi id.
                     </p>
@@ -157,25 +157,25 @@
         </div>
         <div class="third-container">
             <div class="row">
-                <div class="col-lg-3 col-md-6 d-flex">
+                <div class="col-lg-3 col-md-3 col-sm-6 d-flex">
                     <div>
                         <h2><div id="numberWang1"></div></h2>
                         <h6>Happy Customers</h6>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 d-flex">
+                <div class="col-lg-3 col-md-3 col-sm-6 d-flex">
                     <div>
                         <h2><div id="numberWang2"></div></h2>
                         <h6>Monthly Visitors</h6>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 d-flex">
+                <div class="col-lg-3 col-md-3 col-sm-6 d-flex">
                     <div>
                         <h2><div id="numberWang3"></div></h2>
                         <h6>Countries Worldwide</h6>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 d-flex">
+                <div class="col-lg-3 col-md-3 col-sm-6 d-flex">
                     <div>
                         <h2><div id="numberWang4"></div></h2>
                         <h6>Top Partners</h6>
@@ -183,18 +183,74 @@
                 </div>
             </div>
         </div>
-        <div class="forth-container container d-flex justify-content-center my-5 position-relative">
-            <!-- <img width="65%" src="../image/Video card.png" alt=""> -->
-            <video controls  src="../image/WhatsApp Video 2024-09-16 at 14.58.29_5ecfe558.mp4"></video>
+        <div class="forth-container container d-flex justify-content-center position-relative">
+            <video controls src="../image/WhatsApp Video 2024-09-16 at 14.58.29_5ecfe558.mp4"></video>
         </div>
-        <div class="sixth-container text-center container ">
-          <h1>Meet Our Team</h1>
-          <p>Lorem ipsum dolor sit amet consectetur. Mattis vitae vitae est venenatis egestas <br> pharetra. Morbi sit tellus elementum elementum tincidunt morbi id. </p>
-<div class="row">
- <div class="col-lg-3"><img src="../image/team-1-user-1.jpg" alt=""></div>
- <div class="col-lg-3"><img src="../image/team-1-user-1.jpg" alt=""></div>
- <div class="col-lg-3"><img src="../image/team-1-user-1.jpg" alt=""></div>
-</div>
+        <div class="fivth-container text-center container">
+            <h1>Meet Our Team</h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur. Mattis vitae vitae est venenatis egestas <br />
+                pharetra. Morbi sit tellus elementum elementum tincidunt morbi id.
+            </p>
+            <div class="row">
+                <div class="col-lg-3 col-md-4">
+                    <img src="../image/team-1-user-1.jpg" alt="" />
+                    <h4>User Name</h4>
+                    <p>Profession</p>
+                    <div class="icons">
+                        <a href="/"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="/"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="/"><i class="fa-brands fa-square-x-twitter"></i></a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4">
+                    <img src="../image/team-1-user-1.jpg" alt="" />
+                    <h4>User Name</h4>
+                    <p>Profession</p>
+                    <div class="icons">
+                        <a href="/"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="/"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="/"><i class="fa-brands fa-square-x-twitter"></i></a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4">
+                    <img src="../image/team-1-user-1.jpg" alt="" />
+                    <h4>User Name</h4>
+                    <p>Profession</p>
+                    <div class="icons">
+                        <a href="/"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="/"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="/"><i class="fa-brands fa-square-x-twitter"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="sixth-container container text-center">
+            <h1>Big Companies Are Here</h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur. Mattis vitae vitae est venenatis egestas <br />
+                pharetra. Morbi sit tellus elementum elementum tincidunt morbi id.
+            </p>
+            <img src="../image/row.png" alt="" />
+        </div>
+        <div class="seventh-container container-fluid p-0 m-0">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 col-md-6 d-flex">
+                        <div>
+                            <h6>WORK WITH US</h6>
+                            <h1>Now Let’s grow Yours</h1>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur. Mattis vitae vitae est <br />
+                                venenatis egestas pharetra. Morbi sit tellus elementum <br />
+                                elementum tincidunt morbi id.
+                            </p>
+                            <a href="/">Join Us </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-6 d-flex img"><img src="../image/2.png" alt="" /> <img src="../image/9.png" alt="" /></div>
+                </div>
+            </div>
         </div>
         <footer>
             <div class="first-container-footer container">
