contact us page

--- a/file/About.html
+++ b/file/About.html
@@ -94,7 +94,7 @@
                                 <a class="nav-link" href="../file/Blogs.html">Blog</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Contact</a>
+                                <a class="nav-link" href="../file/contact.html">Contact</a>
                             </li>
                         </ul>
                         <!-- Right Side Icons and Links -->
@@ -134,7 +134,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 d-flex">
-                    <img src="../image/hero-cover-1.png" alt="" />
+                    <img src="../image/hero-cover-2.png" alt="" />
                 </div>
             </div>
         </div>
@@ -278,7 +278,7 @@
                     <div class="col-lg-2 col-md-4">
                         <h6>Company</h6>
                         <ul>
-                            <li><a href="">About</a></li>
+                            <li><a href="../file/About.html">About</a></li>
                             <li><a href="">Features</a></li>
                             <li><a href="">Works</a></li>
                             <li><a href="">Career</a></li>
