complet contact us page

--- a/file/Blogs.html
+++ b/file/Blogs.html
@@ -108,27 +108,13 @@
                   >Home</a
                 >
               </li>
-              <li class="nav-item dropdown">
+              <li class="nav-item">
                 <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  id="navbarDropdown"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
+                  class="nav-link active"
+                  aria-current="page"
+                  href="../file/Shop.html"
+                  >Shop</a
                 >
-                  Shop
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">shop 1</a></li>
-                  <li><hr class="dropdown-divider" /></li>
-
-                  <li><a class="dropdown-item" href="#">shop 2</a></li>
-                  <li><hr class="dropdown-divider" /></li>
-                  <li>
-                    <a class="dropdown-item" href="#">Shop 3</a>
-                  </li>
-                </ul>
               </li>
               <li class="nav-item">
                 <a class="nav-link " href="../file/About.html">About</a>
