--- a/file/contact.html
+++ b/file/contact.html
@@ -111,27 +111,13 @@
                   >Home</a
                 >
               </li>
-              <li class="nav-item dropdown">
+              <li class="nav-item">
                 <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  id="navbarDropdown"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
+                  class="nav-link active"
+                  aria-current="page"
+                  href="../file/Shop.html"
+                  >Shop</a
                 >
-                  Shop
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Shop 1</a></li>
-                  <li><hr class="dropdown-divider" /></li>
-
-                  <li><a class="dropdown-item" href="#"> Shop 2</a></li>
-                  <li><hr class="dropdown-divider" /></li>
-                  <li>
-                    <a class="dropdown-item" href="#">Shop 3</a>
-                  </li>
-                </ul>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="../file/About.html">About</a>
@@ -202,7 +188,7 @@
           With Big Ideas
       </h1>
       <div class="row">
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-md-6">
             <div>
               <i class="fa-solid fa-phone"></i>
             <h6><a href="/">Maddah.expert@example.com</a></h6>
@@ -211,7 +197,7 @@
             <a href="/">Submit Request</a>
             </div>
         </div>
-        <div style="background-color: #8b4513; color: #fff;" class="col-lg-3 braon-bg">
+        <div style="background-color: #8b4513; color: #fff;" class="col-lg-3 col-md-6 braon-bg">
            <div> <i class="fa-solid fa-location-dot"></i>
             <h6><a href="/">Maddah.expert@example.com</a></h6>
             <h6><a href="/">Maddah.expert@example.com</a></h6>
@@ -220,7 +206,7 @@
 
           </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-md-6">
            <div>
             <i class="fa-solid fa-envelope"></i>
             <h6><a href="/">Maddah.expert@example.com</a></h6>
