--- a/file/About.html
+++ b/file/About.html
@@ -72,21 +72,14 @@
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                             </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Shop
-                                </a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="#">Shop 1</a></li>
-                                    <li><hr class="dropdown-divider" /></li>
-
-                                    <li><a class="dropdown-item" href="#">Shop 2</a></li>
-                                    <li><hr class="dropdown-divider" /></li>
-                                    <li>
-                                        <a class="dropdown-item" href="#">Shop 3</a>
-                                    </li>
-                                </ul>
-                            </li>
+                            <li class="nav-item">
+                                <a
+                                  class="nav-link active"
+                                  aria-current="page"
+                                  href="../file/Shop.html"
+                                  >Shop</a
+                                >
+                              </li>
                             <li class="nav-item">
                                 <a class="nav-link About" href="../file/About.html">About</a>
                             </li>
