--- a/file/Shop.html
+++ b/file/Shop.html
@@ -35,7 +35,7 @@
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
-  <body class="Blog">
+  <body class="Shop">
     <header>
       <!-- Top Header Section -->
       <div class="container-fluid p-0 m-0 top-line">
@@ -76,7 +76,7 @@
       </div>
       <!-- Navigation Bar -->
 
-      <nav class="navbar navbar-expand-lg navbar-light bg-white  ">
+      <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
           <!-- Logo -->
           <a class="navbar-brand d-flex align-items-center" href="#">
@@ -104,28 +104,30 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html"
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="../index.html"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
                 <a
-                  class="nav-link active"
+                  class="nav-link active shop"
                   aria-current="page"
                   href="../file/Shop.html"
                   >Shop</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="../file/About.html">About</a>
+                <a class="nav-link" href="../file/About.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link Blog" href="../file/Blogs.html">Blog</a>
+                <a class="nav-link" href="../file/Blogs.html">Blog</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="../file/contact.html">Contact</a>
               </li>
-            
             </ul>
             <!-- Right Side Icons and Links -->
             <div class="d-flex align-items-center">
@@ -151,6 +153,128 @@
         </div>
       </nav>
     </header>
+    <div class="first-container container">
+      <div class="d-flex my-4">
+        <h1>Shop</h1>
+        <div class="d-flex">
+          <a href="" class="active">Home </a>
+          <i class="fa-solid fa-angle-right"></i> <a href=""> Shop</a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-2 position-relative">
+          <img src="../image/43 1.png" alt="" />
+          <a href="" class="position-absolute">
+            <h6>MUSIC</h6>
+            <p>5 item</p>
+          </a>
+        </div>
+        <div class="col-lg-2 position-relative">
+          <img src="../image/64 1.png" alt="" />
+          <a href="" class="position-absolute">
+            <h6>MUSIC</h6>
+            <p>5 item</p>
+          </a>
+        </div>
+        <div class="col-lg-2 position-relative">
+          <img src="../image/55 1.png" alt="" />
+          <a href="" class="position-absolute">
+            <h6>MUSIC</h6>
+            <p>5 item</p>
+          </a>
+        </div>
+        <div class="col-lg-2 position-relative">
+          <img src="../image/41 1.png" alt="" />
+          <a href="" class="position-absolute">
+            <h6>MUSIC</h6>
+            <p>5 item</p>
+          </a>
+        </div>
+        <div class="col-lg-2 position-relative">
+          <img src="../image/20 1.png" alt="" />
+          <a href="" class="position-absolute">
+            <h6>MUSIC</h6>
+            <p>5 item</p>
+          </a>
+        </div>
+        
+      </div>
+    </div>
+    <footer>
+      <div class="first-container-footer container">
+        <div class="row">
+          <div class="col-lg-6">
+            <h1>STAY UPTO DATE ABOUT OUR LATEST OFFERS</h1>
+          </div>
+          <div class="col-lg-6">
+            <form action="">
+              <input type="email" placeholder="Enter your email address" />
+              <br />
+              <button>Subscribe to Newsletter</button>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-3 col-md-4">
+            <img src="image/LOGO.png" alt="" />
+            <p class="my-3">
+              Lorem ipsum dolor sit amet consectetur. Mattis vitae vitae est
+              venenatis egestas pharetra
+            </p>
+          </div>
+          <div class="col-lg-2 col-md-4">
+            <h6>Company</h6>
+            <ul>
+              <li><a href="">About</a></li>
+              <li><a href="">Features</a></li>
+              <li><a href="">Works</a></li>
+              <li><a href="">Career</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-2 col-md-4">
+            <h6>Help</h6>
+            <ul>
+              <li><a href="">Customer Support</a></li>
+              <li><a href="">Delivery Details</a></li>
+              <li><a href="">Terms & Conditions</a></li>
+              <li><a href="">Privacy Policy</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-2 col-md-4">
+            <h6>FAQ</h6>
+            <ul>
+              <li><a href="">Account</a></li>
+              <li><a href="">Manage Deliveries</a></li>
+              <li><a href="">Orders</a></li>
+              <li><a href="">Payments</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-2 col-md-4">
+            <h6>Resources</h6>
+            <ul>
+              <li><a href="">Free eBooks</a></li>
+              <li><a href="">Development Tutorial</a></li>
+              <li><a href="">How to - Blog</a></li>
+              <li><a href="">Youtube Playlist</a></li>
+            </ul>
+          </div>
+        </div>
+        <hr />
+        <div class="d-flex">
+          <div class="d-flex">
+            <span><i class="fa-brands fa-twitter"></i></span>
+            <span><i class="fa-brands fa-facebook-f"></i></span>
+            <span><i class="fa-brands fa-instagram"></i></span>
+            <span><i class="fa-brands fa-github"></i></span>
+          </div>
+          <div class="d-flex logos">
+            <img src="../image/Frame 53.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
   <!-- ------------------ bootsRap Link ------------------ -->
   <script
