--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
       </nav>
     </header>
     <div class="first-container container-fluid">
+     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex">
           <div>
@@ -170,6 +171,7 @@
           <img src="image/hero-cover-1.png" alt="" />
         </div>
       </div>
+     </div>
     </div>
     <div class="container-fluid company's-logos p-0 mx-0 my-2">
       <img width="100%" src="image/desktop-clients-1.png" alt="" />
