product- detail page

--- a/file/product-detail.html
+++ b/file/product-detail.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-        <title>MADDAH - Shop</title>
+        <title>MADDAH - Product Detail</title>
         <link rel="stylesheet" href="../style-file/style.css" />
         <link rel="stylesheet" href="../style-file/tab.css" />
         <link rel="stylesheet" href="../style-file/mobile.css" />
@@ -27,7 +27,7 @@
 
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     </head>
-    <body class="Shop">
+    <body class="Product-details">
         <header>
             <!-- Top Header Section -->
             <div class="container-fluid p-0 m-0 top-line">
@@ -108,157 +108,14 @@
             </nav>
         </header>
         <div class="first-container container">
-            <div class="d-flex my-4">
-                <h1>Shop</h1>
-                <div class="d-flex">
-                    <a href="" class="active">Home </a>
-                    <i class="fa-solid fa-angle-right"></i> <a href=""> Shop</a>
-                </div>
+            <div class="d-flex">
+                <a href="" class="active">Home </a>
+                <i class="fa-solid fa-angle-right"></i> <a href=""> Shop</a>
             </div>
             <div class="row">
-                <div class="col-lg-2 col-md-2 col-sm-5 position-relative">
-                    <img src="../image/43 1.png" alt="" />
-                    <a href="" class="position-absolute">
-                        <h6>MUSIC</h6>
-                        <p>5 item</p>
-                    </a>
-                </div>
-                <div class="col-lg-2 col-md-2 col-sm-5 position-relative">
-                    <img src="../image/64 1.png" alt="" />
-                    <a href="" class="position-absolute">
-                        <h6>MUSIC</h6>
-                        <p>5 item</p>
-                    </a>
-                </div>
-                <div class="col-lg-2 col-md-2 col-sm-5 position-relative">
-                    <img src="../image/55 1.png" alt="" />
-                    <a href="" class="position-absolute">
-                        <h6>MUSIC</h6>
-                        <p>5 item</p>
-                    </a>
-                </div>
-                <div class="col-lg-2 col-md-2 col-sm-5 position-relative">
-                    <img src="../image/41 1.png" alt="" />
-                    <a href="" class="position-absolute">
-                        <h6>MUSIC</h6>
-                        <p>5 item</p>
-                    </a>
-                </div>
-                <div class="col-lg-2 col-md-2 col-sm-5 position-relative">
-                    <img src="../image/20 1.png" alt="" />
-                    <a href="" class="position-absolute">
-                        <h6>MUSIC</h6>
-                        <p>5 item</p>
-                    </a>
-                </div>
+                <div class="col-lg-6"><img id="main-img" src="" alt="" /></div>
+                <div class="col-lg-6"></div>
             </div>
-        </div>
-        <div class="second-container container text-center">
-            <h5>
-                Featured Products
-            </h5>
-            <h3>BESTSELLER PRODUCTS</h3>
-            <p>Problems trying to resolve the conflict between</p>
-            <div class="row mt-5">
-                <div class="col-lg-2 col-md-4 col-sm-5">
-                    <img src="../image/1.png" alt="" />
-                    <h4>Music Instruments</h4>
-                    <a href="/">English Department</a>
-                    <h6>$16.48 <span>$6.48</span></h6>
-                </div>
-                <div class="col-lg-2 col-md-4 col-sm-5">
-                    <img src="../image/2.png" alt="" />
-                    <h4>Music Instruments</h4>
-                    <a href="/">English Department</a>
-                    <h6>$16.48 <span>$6.48</span></h6>
-                </div>
-                <div class="col-lg-2 col-md-4 col-sm-5">
-                    <img src="../image/3.png" alt="" />
-                    <h4>Music Instruments</h4>
-                    <a href="/">English Department</a>
-                    <h6>$16.48 <span>$6.48</span></h6>
-                </div>
-                <div class="col-lg-2 col-md-4 col-sm-5">
-                    <img src="../image/4.png" alt="" />
-                    <h4>Music Instruments</h4>
-                    <a href="/">English Department</a>
-                    <h6>$16.48 <span>$6.48</span></h6>
-                </div>
-                <div class="col-lg-2 col-md-4 col-sm-5">
-                    <img src="../image/5.png" alt="" />
-                    <h4>Music Instruments</h4>
-                    <a href="/">English Department</a>
-                    <h6>$16.48 <span>$6.48</span></h6>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-2 col-md-4 col-sm-5">
-                    <img src="../image/1.png" alt="" />
-                    <h4>Music Instruments</h4>
-                    <a href="/">English Department</a>
-                    <h6>$16.48 <span>$6.48</span></h6>
-                </div>
-                <div class="col-lg-2 col-md-4 col-sm-5">
-                    <img src="../image/2.png" alt="" />
-                    <h4>Music Instruments</h4>
-                    <a href="/">English Department</a>
-                    <h6>$16.48 <span>$6.48</span></h6>
-                </div>
-                <div class="col-lg-2 col-md-4 col-sm-5">
-                    <img src="../image/3.png" alt="" />
-                    <h4>Music Instruments</h4>
-                    <a href="/">English Department</a>
-                    <h6>$16.48 <span>$6.48</span></h6>
-                </div>
-                <div class="col-lg-2 col-md-4 col-sm-5">
-                    <img src="../image/4.png" alt="" />
-                    <h4>Music Instruments</h4>
-                    <a href="/">English Department</a>
-                    <h6>$16.48 <span>$6.48</span></h6>
-                </div>
-                <div class="col-lg-2 col-md-4 col-sm-5">
-                    <img src="../image/5.png" alt="" />
-                    <h4>Music Instruments</h4>
-                    <a href="/">English Department</a>
-                    <h6>$16.48 <span>$6.48</span></h6>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-2 col-md-4 col-sm-5">
-                    <img src="../image/1.png" alt="" />
-                    <h4>Music Instruments</h4>
-                    <a href="/">English Department</a>
-                    <h6>$16.48 <span>$6.48</span></h6>
-                </div>
-                <div class="col-lg-2 col-md-4 col-sm-5">
-                    <img src="../image/2.png" alt="" />
-                    <h4>Music Instruments</h4>
-                    <a href="/">English Department</a>
-                    <h6>$16.48 <span>$6.48</span></h6>
-                </div>
-                <div class="col-lg-2 col-md-4 col-sm-5">
-                    <img src="../image/3.png" alt="" />
-                    <h4>Music Instruments</h4>
-                    <a href="/">English Department</a>
-                    <h6>$16.48 <span>$6.48</span></h6>
-                </div>
-                <div class="col-lg-2 col-md-4 col-sm-5">
-                    <img src="../image/4.png" alt="" />
-                    <h4>Music Instruments</h4>
-                    <a href="/">English Department</a>
-                    <h6>$16.48 <span>$6.48</span></h6>
-                </div>
-                <div class="col-lg-2 col-md-4 col-sm-5">
-                    <img src="../image/5.png" alt="" />
-                    <h4>Music Instruments</h4>
-                    <a href="/">English Department</a>
-                    <h6>$16.48 <span>$6.48</span></h6>
-                </div>
-            </div>
-            <button>LOAD MORE PRODUCTS</button>
-        </div>
-        <div class="container-fluid">
-          <img src="../image/desktop-clients-1.png" alt="">
         </div>
         <footer>
             <div class="first-container-footer container">
