--- a/file/About.html
+++ b/file/About.html
@@ -314,7 +314,7 @@
                         <span><i class="fa-brands fa-github"></i></span>
                     </div>
                     <div class="d-flex logos">
-                        <img src="image/Frame 53.png" alt="" />
+                        <img src="../image/Frame 53.png" alt="" />
                     </div>
                 </div>
             </div>
