--- a/file/product-detail.html
+++ b/file/product-detail.html
@@ -113,9 +113,83 @@
                 <i class="fa-solid fa-angle-right"></i> <a href=""> Shop</a>
             </div>
             <div class="row">
-                <div class="col-lg-6"><img id="main-img" src="" alt="" /></div>
+                <div class="col-lg-6 product-slider"></div>
                 <div class="col-lg-6"></div>
             </div>
+        </div>
+        <div class="second-container container">
+            <div class="d-flex">
+                <h4><a href="/">Description </a></h4>
+                <h4><a href="/">Additional Information</a></h4>
+                <h4>
+                    <a href="/">Reviews <span id="review">(0) </span> </a>
+                </h4>
+            </div>
+            <div class="row">
+                <div class="col-lg-4"><img src="../image/6.png" alt="" /></div>
+                <div class="col-lg-4 d-flex">
+                    <div>
+                        <h3>About the Product</h3>
+                        <p>Met minim Mollie non desert Alamo est sit cliquey dolor do met sent. RELIT official consequent door ENIM RELIT Mollie. Excitation venial consequent sent nostrum met.</p>
+                        <p>Met minim Mollie non desert Alamo est sit cliquey dolor do met sent. RELIT official consequent door ENIM RELIT Mollie. Excitation venial consequent sent nostrum met.</p>
+                        <p>Met minim Mollie non desert Alamo est sit cliquey dolor do met sent. RELIT official consequent door ENIM RELIT Mollie. Excitation venial consequent sent nostrum met.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 d-flex">
+                    <div>
+                        <h3>Features</h3>
+
+                        <p id="Feature"><i class="fa-solid fa-angle-right"></i>the quick fox jumps over the lazy dog</p>
+                        <p id="Feature"><i class="fa-solid fa-angle-right"></i>the quick fox jumps over the lazy dog</p>
+                        <p id="Feature"><i class="fa-solid fa-angle-right"></i>the quick fox jumps over the lazy dog</p>
+                        <p id="Feature"><i class="fa-solid fa-angle-right"></i>the quick fox jumps over the lazy dog</p>
+                        <h3>Quality</h3>
+                        <p id="Quality"><i class="fa-solid fa-angle-right"></i>the quick fox jumps over the lazy dog</p>
+                        <p id="Quality"><i class="fa-solid fa-angle-right"></i>the quick fox jumps over the lazy dog</p>
+                        <p id="Quality"><i class="fa-solid fa-angle-right"></i>the quick fox jumps over the lazy dog</p>
+                        <p id="Quality"><i class="fa-solid fa-angle-right"></i>the quick fox jumps over the lazy dog</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="third-container container">
+            <h3>BESTSELLER PRODUCTS</h3>
+            <hr />
+            <div class="row">
+                <div class="col-lg-2">
+                    <img src="../image/1.png" alt="" />
+                    <h5>Music Instruments</h5>
+                    <a href="/">English Department</a>
+                    <h6>$16.48 <span>$6.48</span></h6>
+                </div>
+                <div class="col-lg-2">
+                    <img src="../image/1.png" alt="" />
+                    <h5>Music Instruments</h5>
+                    <a href="/">English Department</a>
+                    <h6>$16.48 <span>$6.48</span></h6>
+                </div>
+                <div class="col-lg-2">
+                    <img src="../image/1.png" alt="" />
+                    <h5>Music Instruments</h5>
+                    <a href="/">English Department</a>
+                    <h6>$16.48 <span>$6.48</span></h6>
+                </div>
+                <div class="col-lg-2">
+                    <img src="../image/1.png" alt="" />
+                    <h5>Music Instruments</h5>
+                    <a href="/">English Department</a>
+                    <h6>$16.48 <span>$6.48</span></h6>
+                </div>
+                <div class="col-lg-2">
+                    <img src="../image/1.png" alt="" />
+                    <h5>Music Instruments</h5>
+                    <a href="/">English Department</a>
+                    <h6>$16.48 <span>$6.48</span></h6>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <img src="../image/desktop-clients-1.png" alt="" />
         </div>
         <footer>
             <div class="first-container-footer container">
