complet product veiw

--- a/file/product-detail.html
+++ b/file/product-detail.html
@@ -113,8 +113,43 @@
                 <i class="fa-solid fa-angle-right"></i> <a href=""> Shop</a>
             </div>
             <div class="row">
-                <div class="col-lg-6 product-slider"></div>
-                <div class="col-lg-6"></div>
+                <div class="col-lg-6 product-slider">
+                    <div class="main-img">
+                        <img src="../image/carousel-inner.png" alt="" />
+                    </div>
+                    <div class="d-flex gap-2"><img width="100px" src="../image/carousel-inner.png" alt="" /> <img width="100px" src="../image/20 1.png" alt="" /> <img width="100px" src="../image/16 1.png" alt="" /></div>
+                </div>
+                <div class="col-lg-6">
+                    <h3>Harmonium</h3>
+                    <div id="reviews" class="d-flex">
+                        <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
+                        <h6>10 Reviews</h6>
+                    </div>
+                    <h1 id="price" class="price">$1,139.33</h1>
+                    <h6 class="d-flex">Availability : <span>In Stock </span></h6>
+                    <p>Met minim Mollie non desert Alamo est sit cliquey dolor do met sent. RELIT official consequent door ENIM RELIT Mollie. Excitation venial consequent sent nostrum met.</p>
+
+                    <div class="d-flex item-color">
+                        <span style="background: #23a6f0;"></span>
+                        <span style="background: #23856d;"></span>
+                        <span style="background: #e77c40;"></span>
+                        <span style="background: #252b42;"></span>
+                    </div>
+                    <div class="buy-now d-flex">
+                        <button>Buy Now</button>
+                        <div class="d-flex">
+                            <span>
+                                <a href="/"><i class="fa-regular fa-heart"></i></a>
+                            </span>
+                            <span>
+                                <a href="/"><i class="fa-solid fa-cart-shopping"></i></a>
+                            </span>
+                            <span>
+                                <a href="/"><i class="fa-regular fa-eye"></i></a>
+                            </span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="second-container container">
