--- a/file/product-detail.html
+++ b/file/product-detail.html
@@ -113,13 +113,13 @@
                 <i class="fa-solid fa-angle-right"></i> <a href=""> Shop</a>
             </div>
             <div class="row">
-                <div class="col-lg-6 product-slider">
+                <div class="col-lg-6 col-md-6 product-slider">
                     <div class="main-img">
                         <img src="../image/carousel-inner.png" alt="" />
                     </div>
                     <div class="d-flex gap-2"><img width="100px" src="../image/carousel-inner.png" alt="" /> <img width="100px" src="../image/20 1.png" alt="" /> <img width="100px" src="../image/16 1.png" alt="" /></div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-6">
                     <h3>Harmonium</h3>
                     <div id="reviews" class="d-flex">
                         <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
@@ -161,8 +161,8 @@
                 </h4>
             </div>
             <div class="row">
-                <div class="col-lg-4"><img src="../image/6.png" alt="" /></div>
-                <div class="col-lg-4 d-flex">
+                <div class="col-lg-4 col-md-6 "><img src="../image/6.png" alt="" /></div>
+                <div class="col-lg-4 col-md-6 d-flex">
                     <div>
                         <h3>About the Product</h3>
                         <p>Met minim Mollie non desert Alamo est sit cliquey dolor do met sent. RELIT official consequent door ENIM RELIT Mollie. Excitation venial consequent sent nostrum met.</p>
@@ -170,7 +170,7 @@
                         <p>Met minim Mollie non desert Alamo est sit cliquey dolor do met sent. RELIT official consequent door ENIM RELIT Mollie. Excitation venial consequent sent nostrum met.</p>
                     </div>
                 </div>
-                <div class="col-lg-4 d-flex">
+                <div class="col-lg-4 col-md-6 d-flex">
                     <div>
                         <h3>Features</h3>
 
@@ -191,31 +191,31 @@
             <h3>BESTSELLER PRODUCTS</h3>
             <hr />
             <div class="row">
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-4 ">
                     <img src="../image/1.png" alt="" />
                     <h5>Music Instruments</h5>
                     <a href="/">English Department</a>
                     <h6>$16.48 <span>$6.48</span></h6>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-4">
                     <img src="../image/1.png" alt="" />
                     <h5>Music Instruments</h5>
                     <a href="/">English Department</a>
                     <h6>$16.48 <span>$6.48</span></h6>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-4">
                     <img src="../image/1.png" alt="" />
                     <h5>Music Instruments</h5>
                     <a href="/">English Department</a>
                     <h6>$16.48 <span>$6.48</span></h6>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-4">
                     <img src="../image/1.png" alt="" />
                     <h5>Music Instruments</h5>
                     <a href="/">English Department</a>
                     <h6>$16.48 <span>$6.48</span></h6>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-4">
                     <img src="../image/1.png" alt="" />
                     <h5>Music Instruments</h5>
                     <a href="/">English Department</a>
